--- a/style.css
+++ b/style.css
@@ -16,7 +16,12 @@
 }
 
 html, body{
-    background-color: var(--color-primary);
+    /* background-color: var(--color-primary); */
+    background-image: url('https://images.unsplash.com/photo-1555169062-013468b47731?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80');
+    background-size: cover;
+    /* background-position: 10%; */
+    background-repeat: no-repeat;
+    /* width: 100%; */
     height: 100%;
     font-size: 1.6rem;
 }
